<?xml version="1.0"?>
<package format="2">
    <name>emergency_stop_recover_pa</name>
    <version>0.0.0</version>
    <description>ProAut emergency_stop_recover package</description>
    <maintainer email="abkar@hrz.tu-chemnitz.de">Abhishek Karote</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>pcl_conversions</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roslint</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>

</package>
