<?xml version="1.0"?>
<package format="2">
    <name>emergency_stop_recover_pa</name>
    <version>0.0.0</version>
    <description>ProAut emergency_stop_recover package</description>
    <maintainer email="abkar@hrz.tu-chemnitz.de">Abhishek Karote</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslint</build_depend>

    <depend>roscpp</depend>
    <depend>dynamic_reconfigure</depend>

    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
</package>
